Ejemplo dapper llamadas sync

--- a/FruteriaAPI/appsettings.json
+++ b/FruteriaAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Fruteria": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=Fruteria;Integrated Security=True;",
+    "Fruterias_Prod": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=Fruterias_Prod;Integrated Security=True;"
+  }
 }
